plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.asciidoctor.jvm.convert' version "3.3.2"
}

group = 'com.fondant'
version = '0.0.1-SNAPSHOT'

configurations {
	asciidoctorExtensions
	compileOnly { extendsFrom annotationProcessor }
}


java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
}

dependencyManagement {
	imports {
		mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:3.2.0"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.h2database:h2'

	//OAUTH2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	//SPRING_SECURITY
	implementation "org.springframework.boot:spring-boot-starter-security"

	//SPRING_REST_DOCS
	asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

	//SPRING_SECURITY_TEST
	testImplementation 'org.springframework.security:spring-security-test'

	//JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	//VALIDATION
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	//POSTGRESQL
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//LOMBOK
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//QUERY_DSL
	implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
	implementation "com.querydsl:querydsl-core:5.0.0"
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//COOLSMS
	implementation 'net.nurigo:sdk:4.3.2'

	//PARAMETER_STORE_STARTER
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-parameter-store'

	//IAMPORT
	implementation 'com.github.iamport:iamport-rest-client-java:0.1.6'
}


def querydslDir = "build/generated/querydsl"

sourceSets {
	main.java.srcDirs += [querydslDir]
}

tasks.withType(JavaCompile) {
	options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
}

clean.doLast {
	file(querydslDir).deleteDir()
}

ext {
	snippetsDir = file('build/generated-snippets')
	docsOutDir  = file('build/docs/asciidoc')
}

asciidoctor {
    sourceDir  = file("src/docs")
    outputDir  = docsOutDir
    inputs.dir snippetsDir
    dependsOn test
    configurations 'asciidoctorExtensions'
	baseDirFollowsSourceFile()

    doFirst {
        delete file("${outputDir}")
    }
}

bootJar {
	dependsOn asciidoctor
	duplicatesStrategy = DuplicatesStrategy.INCLUDE
	from("$docsOutDir") {
		into "BOOT-INF/classes/static/docs"
	}
}

tasks.named('test') {
	useJUnitPlatform()
  	outputs.dir snippetsDir
	systemProperty "spring.profiles.active", "test"
}